--- a/resources/nginx/nginx.conf
+++ b/resources/nginx/nginx.conf
@@ -1,4 +1,3 @@
-
 # Log errors to stdout - Tested?
 error_log /dev/stdout warn;
 
@@ -79,7 +78,7 @@ http {
             proxy_set_header Connection "upgrade";
         }
 
-        location = "{WORKSPACE_BASE_URL_DECODED}/favicon.ico" {
+        location = "{DUGONG_BASE_URL_DECODED}/favicon.ico" {
             # use favicon in resources folder
             auth_basic off;
             alias /resources/branding/favicon.ico;
@@ -112,17 +111,17 @@ http {
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
 
-            proxy_pass http://jupyter{WORKSPACE_BASE_URL_ENCODED}/http_over_websocket$remaining_part$is_args$args;
+            proxy_pass http://jupyter{DUGONG_BASE_URL_ENCODED}/http_over_websocket$remaining_part$is_args$args;
         }
 
         # if base path is not in request url -> alway redirect to base path
-        location ~* "^(?!{WORKSPACE_BASE_URL_DECODED}).*$" {
+        location ~* "^(?!{DUGONG_BASE_URL_DECODED}).*$" {
             auth_basic off;
-            return 302 {WORKSPACE_BASE_URL_ENCODED}$request_uri;
+            return 302 {DUGONG_BASE_URL_ENCODED}$request_uri;
         }
 
         # needed for the kernel to connect
-        location ~* "^{WORKSPACE_BASE_URL_DECODED}/(api/kernels/[^/]+/(channels|iopub|shell|stdin)|terminals/websocket)/?" {
+        location ~* "^{DUGONG_BASE_URL_DECODED}/(api/kernels/[^/]+/(channels|iopub|shell|stdin)|terminals/websocket)/?" {
             proxy_pass http://jupyter;
             
             proxy_set_header Referer $served_referer;
@@ -140,12 +139,12 @@ http {
 
         # if url is called without trailing slash, add a trailing slash, otherwise it cannot be routed correctly.
         # example: /tools/netdata -> /tools/netdata/ ; /tools/vnc -> /tools/vnc/ ; /tools/netdata/foo -(unchanged)> /tools/netdata/foo
-        location ~* "^{WORKSPACE_BASE_URL_DECODED}/tools/[^/]+$" {
+        location ~* "^{DUGONG_BASE_URL_DECODED}/tools/[^/]+$" {
             # uri is only the path whereas request_uri also contains args
             return 302 $uri/$is_args$args;
         }
 
-        location ~* "^{WORKSPACE_BASE_URL_DECODED}/tools/(?<tool>[a-zA-Z]+)/(?<remaining_part>.*)" {
+        location ~* "^{DUGONG_BASE_URL_DECODED}/tools/(?<tool>[a-zA-Z]+)/(?<remaining_part>.*)" {
             access_log /var/log/nginx/upstream.log my_upstream;
 
             # Allow CORS requests
@@ -167,7 +166,7 @@ http {
                 -- only authenticate via jupyter ping method if it is activated (not false)
                 if "{AUTHENTICATE_VIA_JUPYTER}" ~= "false" then
                     local res, error = http_connection:request_uri(
-                        "http://127.0.0.1:8090{WORKSPACE_BASE_URL_ENCODED}/tooling/ping", 
+                        "http://127.0.0.1:8090{DUGONG_BASE_URL_ENCODED}/tooling/ping", 
                         {
                             method = "GET", 
                             headers = {
@@ -181,7 +180,7 @@ http {
 
                     if error ~= nil or res == nil or res.status ~= 200 then
                         -- TODO add next flag -> to redirect back?
-                        return ngx.redirect("{WORKSPACE_BASE_URL_ENCODED}/")
+                        return ngx.redirect("{DUGONG_BASE_URL_ENCODED}/")
                     end
                 end
             }
@@ -194,7 +193,7 @@ http {
             }
             if ($tool = ungit) {
                 set $tool_port 8051;
-                set $remaining_part {WORKSPACE_BASE_URL_ENCODED}/tools/ungit/$remaining_part; # since ungit is listening on the specific base_url, it has to be prepended here
+                set $remaining_part {DUGONG_BASE_URL_ENCODED}/tools/ungit/$remaining_part; # since ungit is listening on the specific base_url, it has to be prepended here
             }
             if ($tool = glances) {
                 set $tool_port 8053;
@@ -230,7 +229,7 @@ http {
         }
         
         # Access all-ports via /tools/PORT
-        location ~* "^{WORKSPACE_BASE_URL_DECODED}/tools/(?<access_port>[0-9]+)/(?<remaining_part>.*)" {
+        location ~* "^{DUGONG_BASE_URL_DECODED}/tools/(?<access_port>[0-9]+)/(?<remaining_part>.*)" {
             access_log /var/log/nginx/upstream.log my_upstream;
             
             # Allow CORS requests
@@ -252,7 +251,7 @@ http {
                 -- only authenticate via jupyter ping method if it is activated (not false)
                 if "{AUTHENTICATE_VIA_JUPYTER}" ~= "false" then
                     local res, error = http_connection:request_uri(
-                        "http://127.0.0.1:8090{WORKSPACE_BASE_URL_ENCODED}/tooling/ping", 
+                        "http://127.0.0.1:8090{DUGONG_BASE_URL_ENCODED}/tooling/ping", 
                         {
                             method = "GET", 
                             headers = {
@@ -266,7 +265,7 @@ http {
 
                     if error ~= nil or res == nil or res.status ~= 200 then
                         -- TODO add next flag -> to redirect back?
-                        return ngx.redirect("{WORKSPACE_BASE_URL_ENCODED}/")
+                        return ngx.redirect("{DUGONG_BASE_URL_ENCODED}/")
                     end
                 end
             }
@@ -298,7 +297,7 @@ http {
         }
 
         # Shared Tooling and SSH setup
-        location = "{WORKSPACE_BASE_URL_DECODED}/shared/ssh/setup" {
+        location = "{DUGONG_BASE_URL_DECODED}/shared/ssh/setup" {
             auth_basic off;
 	        
             proxy_set_header X-Real-IP $remote_addr;
@@ -306,17 +305,17 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header Origin ""; # set origin to empty, otherwise Jupyter returns a bad origin request
 
-            proxy_pass http://jupyter{WORKSPACE_BASE_URL_ENCODED}/shared/ssh/setup$is_args$args;
+            proxy_pass http://jupyter{DUGONG_BASE_URL_ENCODED}/shared/ssh/setup$is_args$args;
         }
 
         # if url is called without trailing slash, add a trailing slash, otherwise it cannot be routed correctly.
-        location ~* "^{WORKSPACE_BASE_URL_DECODED}/shared/tools/[^/]+$" {
+        location ~* "^{DUGONG_BASE_URL_DECODED}/shared/tools/[^/]+$" {
             auth_basic off;
             return 302 $uri/$is_args$args;
         }
 
         # File sharing support
-        location ~* "^{WORKSPACE_BASE_URL_DECODED}/shared/filebrowser/(?<remaining_part>.*)" {
+        location ~* "^{DUGONG_BASE_URL_DECODED}/shared/filebrowser/(?<remaining_part>.*)" {
             access_log /var/log/nginx/upstream.log my_upstream;
             set $token '';
 
@@ -324,7 +323,7 @@ http {
             # needs to be in set_by_lua clause, otherwise it is not executed before auth_basic
             set_by_lua $auth_basic '
                 local token = ngx.var.arg_token
-                local cookie_name = "workspace-token-shared-filebrowser"
+                local cookie_name = "dugong-token-shared-filebrowser"
                 if token == nil or token == "" then
                     token = ngx.var["cookie_" .. cookie_name]
                 end
@@ -338,9 +337,9 @@ http {
             # Check if valid token (40 chars)
             access_by_lua_block {
                 local token = ngx.var.arg_token
-                local cookie_name = "workspace-token-shared-filebrowser"
+                local cookie_name = "dugong-token-shared-filebrowser"
 
-                local tool_path = "{WORKSPACE_BASE_URL_ENCODED}/shared/filebrowser/"
+                local tool_path = "{DUGONG_BASE_URL_ENCODED}/shared/filebrowser/"
 
                 if token == nil or token == '' then
                     token = ngx.var["cookie_" .. cookie_name]
@@ -365,7 +364,7 @@ http {
                         local http = require "resty.http"
                         local http_connection = http.new()
                         local res, error = http_connection:request_uri(
-                            "http://127.0.0.1:8090{WORKSPACE_BASE_URL_ENCODED}/tooling/ping", 
+                            "http://127.0.0.1:8090{DUGONG_BASE_URL_ENCODED}/tooling/ping", 
                             {
                                 method = "GET", 
                                 headers = {
@@ -413,7 +412,7 @@ http {
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection $connection_upgrade;
             proxy_store off;
-            proxy_pass http://127.0.0.1:8055{WORKSPACE_BASE_URL_ENCODED}/shared/filebrowser/$remaining_part$is_args$args;
+            proxy_pass http://127.0.0.1:8055{DUGONG_BASE_URL_ENCODED}/shared/filebrowser/$remaining_part$is_args$args;
 
             gzip on;
             gzip_proxied any;
@@ -421,7 +420,7 @@ http {
         }
 
          # Access all-ports via /tools/PORT - shared modus via access token
-        location ~* "^{WORKSPACE_BASE_URL_DECODED}/shared/tools/(?<access_port>[0-9]+)/(?<remaining_part>.*)" {
+        location ~* "^{DUGONG_BASE_URL_DECODED}/shared/tools/(?<access_port>[0-9]+)/(?<remaining_part>.*)" {
             access_log /var/log/nginx/upstream.log my_upstream;
             
             auth_basic off;
@@ -437,7 +436,7 @@ http {
                 return 200;
             }
             
-            # Check if request was made with a valid token either as get parameter or in workspace-token-tool-PORT cookie
+            # Check if request was made with a valid token either as get parameter or in dugong-token-tool-PORT cookie
             access_by_lua_block {
                 if "{SHARED_LINKS_ENABLED}" ~= "true" then
                     ngx.status = 401
@@ -454,7 +453,7 @@ http {
                     ngx.status = 500
                     ngx.exit(500)
                 end
-                local tool_path = "{WORKSPACE_BASE_URL_ENCODED}/shared/tools/" ..  ngx.var.access_port .. "/"
+                local tool_path = "{DUGONG_BASE_URL_ENCODED}/shared/tools/" ..  ngx.var.access_port .. "/"
                 local token_str = "{KEY_HASH}" .. tool_path
 
                 local ok = sha1:update(token_str)
@@ -464,7 +463,7 @@ http {
                     ngx.exit(500)
                 end
                 local token = ngx.var.arg_token
-                local cookie_name = "workspace-token-tool-" .. ngx.var.access_port
+                local cookie_name = "dugong-token-tool-" .. ngx.var.access_port
 
                 if token == nil or token == '' then
                     token = ngx.var["cookie_" .. cookie_name]
