--- a/Dockerfile.CPU
+++ b/Dockerfile.CPU
@@ -84,6 +84,7 @@ RUN mkdir $RESOURCES_PATH && chmod a+rwx $RESOURCES_PATH \
 COPY resources/scif/* $SCIF_PATH
 COPY resources/nginx/lua-extensions /etc/nginx/nginx_plugins
 COPY resources/nginx/nginx.conf /etc/nginx/nginx.conf
+COPY resources/ssh/ssh_config resources/ssh/sshd_config  /etc/ssh/
 
 ##############################################################################
 # Install base dependencies
