--- a/Dockerfile.CPU
+++ b/Dockerfile.CPU
@@ -81,7 +81,7 @@ RUN mkdir $RESOURCES_PATH && chmod a+rwx $RESOURCES_PATH \
     && mkdir $SSL_RESOURCES_PATH && chmod a+rwx $SSL_RESOURCES_PATH \
     && mkdir $SCIF_PATH && chmod a+rwx $SCIF_PATH
     
-COPY resources/scif/* $SCIF_PATH
+COPY resources/scif/* /resources/scif/
 COPY resources/nginx/lua-extensions /etc/nginx/nginx_plugins
 COPY resources/nginx/nginx.conf /etc/nginx/nginx.conf
 COPY resources/ssh/ssh_config resources/ssh/sshd_config  /etc/ssh/
