--- a/Dockerfile.CPU
+++ b/Dockerfile.CPU
@@ -71,6 +71,7 @@ ENV LANG="en_US.UTF-8"
 ENV LANGUAGE="en_US:en"
 ENV LC_ALL="en_US.UTF-8"
 ENV LANG="C.UTF-8"
+ENV JAVA_HOME="/usr/lib/jvm/java-8-openjdk-amd64"
 
 WORKDIR $HOME
 
