--- a/Dockerfile.CPU
+++ b/Dockerfile.CPU
@@ -142,7 +142,8 @@ RUN apt-get update --fix-missing \
     scif install $SCIF_PATH/nginx.scif \
     && scif install $SCIF_PATH/ssh.scif \
     && scif install $SCIF_PATH/nodejs.scif \
-    && scif install $SCIF_PATH/jdk.scif
+    && scif install $SCIF_PATH/jdk.scif \
+    && scif install $SCIF_PATH/xfce4.scif
 
 ENTRYPOINT ["/usr/local/bin/start"]
 ENTRYPOINT ["tini", "--"]
