--- a/Dockerfile.CPU
+++ b/Dockerfile.CPU
@@ -106,7 +106,7 @@ RUN apt-get update --fix-missing \
     libxext-dev libxrender1 libzmq3-dev protobuf-compiler autoconf libprotobuf-dev \
     google-perftools libprotoc-dev automake libtool cmake fonts-liberation zip arj \
     gzip unrar bzip2 lzop bsdtar zlib1g-dev pkg-config libgtk-3-bin libgtk-3-common \
-    libgtk-3-0:amd64 libgtk-3-dev \
+    libgtk-3-0:amd64 libgtk-3-dev sudo \
     && apt-get --fix-missing install && apt --fix-broken install \
     && apt-get clean && apt-get autoremove && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* \
     && wget --quiet  https://github.com/krallin/tini/releases/download/v0.16.1/tini \
@@ -143,7 +143,8 @@ RUN apt-get update --fix-missing \
     && scif install $SCIF_PATH/ssh.scif \
     && scif install $SCIF_PATH/nodejs.scif \
     && scif install $SCIF_PATH/jdk.scif \
-    && scif install $SCIF_PATH/xfce4.scif
+    && scif install $SCIF_PATH/xfce4.scif \
+    && scif install $SCIF_PATH/rdp.scif
 
 ENTRYPOINT ["/usr/local/bin/start"]
 ENTRYPOINT ["tini", "--"]
