--- a/Dockerfile.CPU
+++ b/Dockerfile.CPU
@@ -87,6 +87,8 @@ COPY resources/scif/* /resources/scif/
 COPY resources/nginx/lua-extensions /etc/nginx/nginx_plugins
 COPY resources/nginx/nginx.conf /etc/nginx/nginx.conf
 COPY resources/ssh/ssh_config resources/ssh/sshd_config  /etc/ssh/
+COPY resources/config/xrdp.ini /etc/xrdp/xrdp.ini
+COPY resources/config/supervisord.conf /etc/supervisor/supervisord.conf
 
 ##############################################################################
 # Install base dependencies
