--- a/Dockerfile.CPU
+++ b/Dockerfile.CPU
@@ -89,6 +89,7 @@ COPY resources/nginx/nginx.conf /etc/nginx/nginx.conf
 COPY resources/ssh/ssh_config resources/ssh/sshd_config  /etc/ssh/
 COPY resources/config/xrdp.ini /etc/xrdp/xrdp.ini
 COPY resources/config/supervisord.conf /etc/supervisor/supervisord.conf
+COPY resources/config/90assumeyes /etc/apt/apt.conf.d/
 
 ##############################################################################
 # Install base dependencies
