--- a/Dockerfile.CPU
+++ b/Dockerfile.CPU
@@ -157,7 +157,8 @@ RUN apt-get update --fix-missing \
     && scif install $SCIF_PATH/supervisor.scif \
     && scif install $SCIF_PATH/python.scif \
     && scif install $SCIF_PATH/novnc.scif \
-    && scif install $SCIF_PATH/gui_tools.scif
+    && scif install $SCIF_PATH/gui_tools.scif \
+    && scif install $SCIF_PATH/config_conda.scif
 
 ENTRYPOINT ["/usr/local/bin/start"]
 ENTRYPOINT ["tini", "--"]
